@@ -10922,7 +10922,7 @@ xmlXPathEvaluatePredicateResult(xmlXPathParserContextPtr ctxt,
         case XPATH_BOOLEAN:
 	    return(res->boolval);
         case XPATH_NUMBER:
-#if defined(_MSC_VER) && (_MSC_VER == 1200)
+#if defined(__BORLANDC__) || (defined(_MSC_VER) && (_MSC_VER == 1200))
 	    return((res->floatval == ctxt->context->proximityPosition) &&
 	           (!xmlXPathIsNaN(res->floatval))); /* MSC pbm Mark Vakoc !*/
 #else
